[metadata]
name = niton-tools
description = Manage data from Niton XRF analyzers
author = Adrian Tasistro-Hart
author_email = adrian@tasistro-hart.com
license = GPL-3.0-only
license_files = LICENSE.txt
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/sarttiso/niton-tools
# Add here related links, for example:
project_urls =
#    Documentation = 
    Source = https://github.com/sarttiso/niton-tools
    Changelog = https://github.com/sarttiso/niton-tools/blob/main/changelog.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pandas
    numpy
    scipy
    geochemdb
    ipyfilechooser
    ipywidgets
    matplotlib

[options.packages.find]
where = src